# disk-search

./: .editorconfig  .env.example  .gitignore  .project-standards.yml  AGENTS.md  CLAUDE.md  README.md  STATUS.md  TODO.md  compose.yaml  manage.py  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: check.yml  dependency-review.yml  deploy.yml
deploy/: deploy-remote.sh
deploy/nginx/: hw-radar.conf
deploy/systemd/: hw-radar-poller.service  hw-radar-web.service
docs/: STATUS.md  TODO.md  further-research-needed-prompts.md  gap-analysis.md  handoff.md  hw-radar.code-workspace  open-questions.md  resolved-questions.md  spec-hygiene-workflow-prompt.md
docs/adr/: README.md  adr-0001-decline-markdown-frontmatter-standard.md  adr-0002-python-tooling-standard-local-deviations.md  adr-0003-deploy-as-lxc-container.md  adr-0004-web-framework-django-htmx.md  adr-0005-single-account-session-auth.md  adr-0006-cd-rsync-over-tailscale-ssh.md  adr-0007-datastore-postgresql-timescaledb.md  adr-0008-currency-landed-cost-normalization.md  adr-0009-secrets-runtime-openbao-agent.md  adr-0010-canonical-data-model.md  adr-0011-composite-deal-score.md  adr-0012-orchestration-apscheduler.md  adr-0013-notification-transport-m365-graph.md  adr-0014-scraping-runtime-escalation-stack.md  adr-0015-availability-heartbeat-grain-volatility-scheduling.md  adr-0016-search-api-self-governance.md  adr-0017-resilient-acquisition.md  adr-0018-manufacturer-spec-catalog.md  adr-0019-listing-catalog-matching-layer.md
docs/archived/: hw-radar.md
docs/handoff/: architecture.md  conventions.md  credentials.md  deployed.md  specs-plans.md  state.md
docs/prompts/: prompt-consistency-workflow.md  prompt-gap-analysis-workflow.md
docs/research/: 2026-07-03-auth-for-self-hosted-single-maintainer-python-app.md  2026-07-03-currency-conversion-and-landed-cost-estimation-for-cross-border-drive-price-scoring.md  2026-07-03-github-actions-cd-private-debian-vm.md  2026-07-03-lightweight-observability-and-scraper-health-monitoring.md  2026-07-03-postgresql-backup-disaster-recovery-single-vm.md  2026-07-04-amazon-data-acquisition-after-paapi-getitems-deprecation.md  2026-07-04-availability-heartbeat-retention-and-storage-policy.md  2026-07-04-oem-part-number-cross-referencing-for-server-pull-drives.md  2026-07-04-oss-license-compliance-tooling-for-a-uv-managed-public-python-project.md  2026-07-04-per-source-inventory-volatility-and-fast-lane-polling.md  README.md  database-architecture.md  (+27 more)
scripts/: check.py  transfer-ignored.sh
(+149 files in other folders)
