# hw-radar — Python toolchain config (Python Tooling SSOT Standard, contract v1.0).
#
# Repo is scaffolded and the verification gate is LIVE and green (uv · Ruff ·
# BasedPyright strict · pytest + coverage · pip-audit; run `uv run python -m scripts.check`).
# Feature implementation has not started — src/hw_radar is a version-only skeleton.
# See AGENTS.md for the toolchain contract and docs/specs/hw-radar-master-spec.md for the design.
# Remaining standard deviation (.vscode/ and CLAUDE.md kept git-ignored) is recorded in
# docs/adr/adr-0002-python-tooling-standard-local-deviations.md.

[project]
name = "hw-radar"
version = "0.1.0"
description = "Watches online marketplaces for enterprise/NAS and recertified HDDs/SSDs and scores the best deals."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
# pytest floor matches [tool.pytest.ini_options].minversion; ruff>=0.14 is the first
# release with non-preview py314 target-version support.
dev = [
    "basedpyright",
    "coverage[toml]",
    "pip-audit",
    "pytest>=9.0",
    "ruff>=0.14",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
# Directories owned by external programs are never linted/formatted by this standard.
extend-exclude = [".claude", ".agents", ".codex", ".continue"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplification
    "C4",   # comprehensions
    "PIE",  # misc improvements
    "PTH",  # pathlib
    "RET",  # return-value issues
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501", # formatter owns line wrapping
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # assert is normal in pytest tests if security rules are later enabled
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"
failOnWarnings = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
